force-app/main/default/objects/Student__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course Applying for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.E.</fullName>
            </value>
            <value>
                <fullName>B.Arch</fullName>
            </value>
            <value>
                <fullName>M.C.A</fullName>
            </value>
            <value>
                <fullName>B.C.A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>