force-app/main/default/objects/Student__c/fields/HSC__c.field-meta.xml
<CustomField>
    <fullName>HSC__c</fullName>
    <label>HSC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>