force-app/main/default/objects/Student__c/fields/Roll_Number__c.field-meta.xml
<CustomField>
    <fullName>Roll_Number__c</fullName>
    <label>Roll Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>