force-app/main/default/objects/Student__c/fields/SSC__c.field-meta.xml
<CustomField>
    <fullName>SSC__c</fullName>
    <label>SSC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>